--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.github.antwankakki:FabricView:latest'
 
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
+    implementation 'com.shuhart.stepview:stepview:1.2.8'
 
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.yongjhih:mismeter:1.0.0'
