--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,13 @@ android {
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-v4:27.1.1'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
     //butterknife
-    compile "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
+    implementation "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterKnifeVersion"
 
     //android dependencies
@@ -46,25 +46,26 @@ dependencies {
     implementation "com.android.support:support-vector-drawable:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
 
-    compile 'io.github.inflationx:calligraphy3:3.0.0'
-    compile 'io.github.inflationx:viewpump:1.0.0'
-    compile 'com.github.anastr:speedviewlib:1.2.0'
-    compile 'com.github.antwankakki:FabricView:latest'
+    implementation 'io.github.inflationx:calligraphy3:3.0.0'
+    implementation 'io.github.inflationx:viewpump:1.0.0'
+    implementation 'com.github.anastr:speedviewlib:1.2.0'
+    implementation 'com.github.antwankakki:FabricView:latest'
 
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
     implementation 'com.shuhart.stepview:stepview:1.2.8'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
     //firebase analytics
-    compile 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 
-    compile 'com.wang.avi:library:2.1.3'
-    compile 'com.github.bumptech.glide:glide:4.7.1'
-    compile 'com.willowtreeapps.spruce:spruce-android:1.0.1'
-    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.google.android.gms:play-services-location:15.0.1'
-    compile 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.willowtreeapps.spruce:spruce-android:1.0.1'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
