--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.appbusters.robinkamboj.senseitall"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 40
-        versionName "10.2"
+        versionCode 41
+        versionName "10.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         // Enabling multi dex support.
         multiDexEnabled true
@@ -77,3 +77,5 @@ apply plugin: 'com.google.gms.google-services'
 repositories {
     mavenCentral()
 }
+
+apply plugin: 'kotlin-android-extensions'
