--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <uses-permission
         android:name="android.permission.BLUETOOTH_ADMIN"
         android:required="false" />
-
     <uses-permission
         android:name="android.permission.ACCESS_COARSE_LOCATION"
         android:required="false" />
@@ -112,7 +111,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".view.splash.splash_activity.SplashActivity"
             android:screenOrientation="portrait">
@@ -149,6 +147,7 @@
         <activity
             android:name=".view.dashboard_activity.DashboardActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".view.tool_activity.ToolActivity"></activity>
     </application>
 
 </manifest>
