calendar library integrated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'io.github.inflationx:viewpump:1.0.0'
     implementation 'com.github.anastr:speedviewlib:1.2.0'
     implementation 'com.github.antwankakki:FabricView:latest'
+    implementation 'com.roomorama:caldroid:3.0.1'
 
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
