--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         resValue "string", "app_name", "Sense It All"
         applicationId "com.appbusters.robinkamboj.senseitall"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 52
         versionName "15.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.github.antwankakki:FabricView:latest'
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'fr.bmartel:jspeedtest:1.32.1'
+    implementation 'com.maltaisn:calcdialog:1.3.1'
 
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
