take note screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.github.antwankakki:FabricView:latest'
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'fr.bmartel:jspeedtest:1.32.1'
+    implementation 'com.github.beigirad:ZigzagView:1.0.6'
 
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
