--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,7 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -59,10 +57,13 @@ dependencies {
     implementation 'io.github.inflationx:calligraphy3:3.0.0'
     implementation 'io.github.inflationx:viewpump:1.0.0'
     implementation 'com.github.anastr:speedviewlib:1.2.0'
-    implementation 'com.github.antwankakki:FabricView:latest'
+    implementation 'com.rm:freedrawview:1.1.2'
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'fr.bmartel:jspeedtest:1.32.1'
     implementation 'com.github.beigirad:ZigzagView:1.0.6'
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
