--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'fr.bmartel:jspeedtest:1.32.1'
     implementation 'com.github.beigirad:ZigzagView:1.0.6'
+    implementation 'com.isseiaoki:simplecropview:1.1.7'
 
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
