applying image filters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'fr.bmartel:jspeedtest:1.32.1'
     implementation 'com.github.beigirad:ZigzagView:1.0.6'
     implementation 'com.isseiaoki:simplecropview:1.1.7'
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
