--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS"
         android:required="false"
         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"
+        android:required="false"/>
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:required="false" />
@@ -38,6 +40,9 @@
         android:required="false" />
     <uses-permission
         android:name="android.permission.USE_FINGERPRINT"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.USE_BIOMETRIC"
         android:required="false" />
     <uses-permission
         android:name="android.permission.BATTERY_STATS"
