added click listeners and page change listeners to tab recycler and pager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -167,7 +167,8 @@
         <activity
             android:name=".view.tool_activity.ToolActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".view.tab_dashboard_activity.TabMainActivity">
+        <activity android:name=".view.tab_dashboard_activity.TabMainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
