--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: "kotlin-kapt"
+
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -41,7 +43,7 @@ dependencies {
 
     //butterknife
     implementation "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterKnifeVersion"
+    kapt "com.jakewharton:butterknife-compiler:$rootProject.ext.butterKnifeVersion"
 
     //android dependencies
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
@@ -53,6 +55,11 @@ dependencies {
     implementation "com.android.support:palette-v7:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
 
+    //dagger
+    implementation 'com.google.dagger:dagger-android:2.21'
+    implementation 'com.google.dagger:dagger-android-support:2.21'
+    kapt 'com.google.dagger:dagger-android-processor:2.21'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
 
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
     implementation 'io.github.inflationx:calligraphy3:3.0.0'
@@ -74,10 +81,10 @@ dependencies {
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
 
     //firebase analytics
-    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 
     implementation 'com.wang.avi:library:2.1.3'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.willowtreeapps.spruce:spruce-android:1.0.1'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
