--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.21'
     kapt 'com.google.dagger:dagger-compiler:2.21'
 
+    //mvvm
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
     implementation 'io.github.inflationx:calligraphy3:3.0.0'
     implementation 'io.github.inflationx:viewpump:1.0.0'
